--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <img src="./img/nucbazappiicon 1.png" alt="Logo Nucbazappi">
         <div class="navbar">
             <ul>
-                <li><a class="navbar-link" href="#home">Home</a></li>
-                <li><a class="navbar-link" href="#carrito">icono carrito</a></li>
-                <li><a class="navbar-link" href="#login">icono login</a></li>
+                <li class="navbar-home">
+                    <img src="./img/Homehome.png" alt="">
+                    <a class="navbar-link" href="#home">Home</a>
+                </li>
+                <li><img src="./img/Icon Cart.png" alt=""></li>
+                <li><img src="./img/Icon Profile.png" alt=""></li>
             </ul>
         </div>
     </header>
@@ -82,7 +85,7 @@
         <h3>Categorias</h3>
         <div class="contenedor-categorias"> 
             <div class="categoria-info">
-                <img src="./img/categ-pizza.png" alt="imagen categoria pizza">
+                <img class="categoria-info-pizza" src="./img/categ-pizza.png" alt="imagen categoria pizza">
                 <h4>Pizzas</h4>
                 <img class="categ-barra" src="./img/categ-rectangulo.png" alt="Barra decorativa">
             </div>
